[package]
name = "deser-stringified"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive", "std", "alloc"] }
serde_json = { version = "1.0.140", features = ["std", "alloc"], optional = true }
serde_yaml = { version = "0.9.34", optional = true }
toml = { version = "0.8.20", optional = true }

[features]
default = ["serde_json"]
serde_json = ["dep:serde_json"]
serde_yaml = ["dep:serde_yaml"]
toml = ["dep:toml"]
